Fix scrollbar for comments and attachments

--- a/app/assets/less/components/task-tag-detail/attachment-list-containe.less
+++ b/app/assets/less/components/task-tag-detail/attachment-list-containe.less
@@ -6,8 +6,12 @@
 
 /* ------ Component ------------------------------------------------------------------------------- */
 .attachment-list-container {
-    overflow-y: auto;
-    overflow-x: hidden;
+    padding-right: 20px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    max-height: 100%;
 
     .loader {
         margin: 10px auto;
