--- a/app/assets/less/components/task-tag-detail/comment-list-container.less
+++ b/app/assets/less/components/task-tag-detail/comment-list-container.less
@@ -5,9 +5,7 @@
 
 /* ------ Component ------------------------------------------------------------------------------- */
 .comment-list-container {
-    padding: 3px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    padding: 3px 20px 3px 3px;
 
     .loader {
         margin: 10px auto;
