--- a/app/assets/less/components/task-tag-detail/comment.less
+++ b/app/assets/less/components/task-tag-detail/comment.less
@@ -61,5 +61,6 @@
     &__content {
         display: block;
         margin: 4px 0 0 37px;
+        word-wrap: break-word;
     }
 }
